2008-01-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidToStringOnStringsRule.cs: Simplified to use rocks
	* AvoidUncalledPrivateCodeRule.cs: Use IsGeneratedCode instead of 
	the older IsCompilerGenerated to avoid more false-positives.
	* AvoidUninstantiatedInternalClassesRule.cs: Simplified to use rocks
	* AvoidUnsealedConcreteAttributesRule.cs: New. Rule to check that 
	concrete attribute classes are sealed [Daniel Abramov]
	* AvoidUnusedParametersRule.cs: Simplified to use rocks and to avoid
	creating (most time) an unneeded MessageCollection.
	* IDisposableWithDestructorWithoutSuppressFinalizeRule.cs: 
	Simplified to use rocks
	* Gendarme.Rules.Performance.mdp: Add rule to MonoDevelop project 
	file.
	* Makefile.am: Add rule and tests to the build.

2008-01-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUncalledPrivateCodeRule.cs: Updated/simplified to use rocks.
	* AvoidUninstantiatedInternalClassesRule.cs: Fix rule to handle
	enums correctly.

2008-01-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidReturningArraysOnPropertiesRule.cs: New. Rule to warn for 
	properties that returns arrays. By Adrian Tsai.
	* Gendarme.Rules.Performance.xml.in: Add rule description.
	* Gendarme.Rules.Performance.mdp: Add rule to MonoDevelop project 
	file.
	* Makefile.am: Add rule and tests to the build.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUnusedParameterRule.cs: If the method is anonymous then, gendarme
	will skip it.

2007-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesRule.cs: Reworked to make the
	rule works with all types defined in the assembly. Information for
	each assembly is cached to speed up searches.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesRule.cs: Reworked to check for
	the more general CompilerGeneratedAttribute (removing the direct 
	check required for <PrivateImplementationDetails>). Refactor to 